first triangle gets rendered

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ find_library(GL GL)
 #creating the library
 include_directories(vendor/TGJGE/src/)
 include_directories(vendor/TGJGE/vendor/stb/)
+include_directories(vendor/TGJGE/vendor/glm/)
 file(GLOB_RECURSE "engine" SRC vendor/TGJGE/src/*.c)
 add_library(tgjge STATIC ${engine})
 
@@ -36,6 +37,7 @@ target_link_libraries(tgjge LINK_PRIVATE "${GLEW}")
 target_link_libraries(tgjge LINK_PRIVATE "${GL}")
 
 #creating library test
+include_directories(src/)
 file(GLOB_RECURSE "dc2" SRC src/*.cpp)
 add_executable(dc2 ${dc2})
 target_link_libraries(dc2 LINK_PRIVATE tgjge)
